More shop progress
- fixed bad GamesManager#getNewGameId bug
- armour goes directly into armour slots
- armour has curse of binding
- lots of data entry
- shrunk shop to 24 slots, increased categories to 9*
- hardcoded quick buy tab